fix: button size

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --el-font-size-base: 12px !important;
+  }
+  body::-webkit-scrollbar {
+    width: 6px;
+  }
+  body::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-gray-300;
+  }
+}
