--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -8,6 +8,7 @@
   }
   body::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
   }
   body::-webkit-scrollbar-thumb {
     @apply rounded-full bg-gray-300;
